# tensorflow-examples

./: .gitignore  dependencies.sh  tensorflow.sh
minimal-tf/: CMakeLists.txt  minimal.cc
mixed/: CMakeLists.txt  cedula.cc  cedula.h  image2tensor.h  mixed.cc  random.cc  solvePnP.cc  solvePnP.h  utils.h  utilsTensorCv.h
notebooks/: TrainFashion.ipynb  leame.txt
segmentation/: CMakeLists.txt  main.cpp
segmentation2/: CMakeLists.txt  segmentation2.cc
tensor_python/: convert.py  csv_convert.py  csv_test.py  csv_train.py  fashion.py  gpu.py  hello.py  leame.txt  mnist_convert.py  mnist_test.py  mnist_train.py  train_csv.py
tensor_python/datasets/iris/: iris_test.csv  iris_training.csv
tensor_python/models/: cedulas_vaale-fp16.txt  digits.tflite  fashion.tflite  petals.json  petals.tflite
tensor_python/models/digits/: saved_model.pb
tensor_python/models/digits/variables/: variables.data-00000-of-00001  variables.index
tensor_python/models/fashion/: fashion.tflite
tensor_python/models/petals/: keras_metadata.pb  saved_model.pb
tensor_python/models/petals/variables/: variables.data-00000-of-00001  variables.index
tensor_python/models/petals2/: keras_metadata.pb  saved_model.pb
tensor_python/models/petals2/variables/: variables.data-00000-of-00001  variables.index
utils/: shared-libs.js
